generated-out/vanilla/dear-imgui-raw-vanilla/cbits/dcimgui_nodefaultargfunctions.h

//-----------------------------------------------------------------------------
// [SECTION] Forward declarations and basic types
// Auto-generated forward declarations for C header
typedef struct ImVec2_t ImVec2;
typedef struct ImFontBaked_t ImFontBaked;                            // Baked data for a ImFont at a given size.
typedef struct ImFontGlyph_t ImFontGlyph;                            // A single font glyph (code point + coordinates within in ImFontAtlas + offset)
typedef int ImGuiWindowFlags;       // -> enum ImGuiWindowFlags_     // Flags: for Begin(), BeginChild()
// Character types
// (we generally use UTF-8 encoded string in the API. This is storage specifically for a decoded character used for keyboard input and display)
typedef unsigned int ImWchar32;        // A single decoded U32 character/code point. We encode them as multi bytes UTF-8 when used in strings.
typedef unsigned short ImWchar16;      // A single decoded U16 character/code point. We encode them as multi bytes UTF-8 when used in strings.
typedef ImWchar32 ImWchar;
typedef ImWchar16 ImWchar;
// Windows
// - Begin() = push window to the stack and start appending to it. End() = pop window from the stack.
// - Passing 'bool* p_open != NULL' shows a window-closing widget in the upper-right corner of the window,
//   which clicking will set the boolean to false when clicked.
// - You may append multiple times to the same window during the same frame by calling Begin()/End() pairs multiple times.
//   Some information such as 'flags' or 'p_open' will only be considered by the first call to Begin().
// - Begin() return false to indicate the window is collapsed or fully clipped, so you may early out and omit submitting
//   anything to the window. Always call a matching End() for each Begin() call, regardless of its return value!
//   [Important: due to legacy reason, Begin/End and BeginChild/EndChild are inconsistent with all other functions
//    such as BeginMenu/EndMenu, BeginPopup/EndPopup, etc. where the EndXXX call should only be called if the corresponding
//    BeginXXX function returned true. Begin and BeginChild are the only odd ones out. Will be fixed in a future update.]
// - Note that the bottom of window stack always contains a window called "Debug".
CIMGUI_API bool ImGui_Begin(const char* name, bool* p_open /* = NULL */, ImGuiWindowFlags flags /* = 0 */);
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset /* = 0 */, const char* overlay_text /* = NULL */, float scale_min /* = FLT_MAX */, float scale_max /* = FLT_MAX */, ImVec2 graph_size /* = ImVec2(0, 0) */);
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset /* = 0 */, const char* overlay_text /* = NULL */, float scale_min /* = FLT_MAX */, float scale_max /* = FLT_MAX */, ImVec2 graph_size /* = ImVec2(0, 0) */);
// Hold rendering data for one glyph.
// (Note: some language parsers may fail to convert the bitfield members, in this case maybe drop store a single u32 or we can rework this)
struct ImFontGlyph_t
{
    unsigned int Colored : 1;     // Flag to indicate glyph is colored and should generally ignore tinting (make it usable with no shift on little-endian as this is used in loops)
    unsigned int Visible : 1;     // Flag to indicate glyph has no visible pixels (e.g. space). Allow early out when rendering.
    unsigned int SourceIdx : 4;   // Index of source in parent font
    unsigned int Codepoint : 26;  // 0x0000..0x10FFFF
    float        AdvanceX;        // Horizontal distance to advance cursor/layout position.
    float        X0, Y0, X1, Y1;  // Glyph corners. Offsets from current cursor/layout position.
    float        U0, V0, U1, V1;  // Texture coordinates for the current value of ImFontAtlas->TexRef. Cached equivalent of calling GetCustomRect() with PackId.
    int          PackId;          // [Internal] ImFontAtlasRectId value (FIXME: Cold data, could be moved elsewhere?)
};
// Font runtime data for a given size
// Important: pointers to ImFontBaked are only valid for the current frame.
struct ImFontBaked_t
{
    // [Internal] Members: Hot ~20/24 bytes (for CalcTextSize)
    ImVector_float       IndexAdvanceX;             // 12-16 // out // Sparse. Glyphs->AdvanceX in a directly indexable way (cache-friendly for CalcTextSize functions which only this info, and are often bottleneck in large UI).
    float                FallbackAdvanceX;          // 4     // out // FindGlyph(FallbackChar)->AdvanceX
    float                Size;                      // 4     // in  // Height of characters/line, set during loading (doesn't change after loading)
    float                RasterizerDensity;         // 4     // in  // Density this is baked at

    // [Internal] Members: Hot ~28/36 bytes (for RenderText loop)
    ImVector_ImU16       IndexLookup;               // 12-16 // out // Sparse. Index glyphs by Unicode code-point.
    ImVector_ImFontGlyph Glyphs;                    // 12-16 // out // All glyphs.
    int                  FallbackGlyphIndex;        // 4     // out // Index of FontFallbackChar

    // [Internal] Members: Cold
    float                Ascent, Descent;           // 4+4   // out // Ascent: distance from top to bottom of e.g. 'A' [0..FontSize] (unscaled)
    unsigned int         MetricsTotalSurface : 26;  // 3  // out // Total surface in pixels to get an idea of the font rasterization/texture cost (not exact, we approximate the cost of padding between glyphs)
    unsigned int         WantDestroy : 1;           // 0  //     // Queued for destroy
    unsigned int         LoadNoFallback : 1;        // 0  //     // Disable loading fallback in lower-level calls.
    unsigned int         LoadNoRenderOnLayout : 1;  // 0  //     // Enable a two-steps mode where CalcTextSize() calls will load AdvanceX *without* rendering/packing glyphs. Only advantageous if you know that the glyph is unlikely to actually be rendered, otherwise it is slower because we'd do one query on the first CalcTextSize and one query on the first Draw.
    int                  LastUsedFrame;             // 4  //     // Record of that time this was bounds
    ImGuiID              BakedId;                   // 4     //     // Unique ID for this baked storage
    ImFont*              OwnerFont;                 // 4-8   // in  // Parent font
    void*                FontLoaderDatas;           // 4-8   //     // Font loader opaque storage (per baked font * sources): single contiguous buffer allocated by imgui, passed to loader.
};
CIMGUI_API void         ImFontBaked_ClearOutputData(ImFontBaked* self);
CIMGUI_API ImFontGlyph* ImFontBaked_FindGlyph(ImFontBaked* self, ImWchar c);            // Return U+FFFD glyph if requested glyph doesn't exists.
CIMGUI_API ImFontGlyph* ImFontBaked_FindGlyphNoFallback(ImFontBaked* self, ImWchar c);  // Return NULL if glyph doesn't exist
CIMGUI_API float        ImFontBaked_GetCharAdvance(ImFontBaked* self, ImWchar c);
CIMGUI_API bool         ImFontBaked_IsGlyphLoaded(ImFontBaked* self, ImWchar c);