generated-out/docking/dear-imgui-raw-docking/src/DearImGui/Raw/ImFontBaked.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.ImFontBaked where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types

#include "dcimgui_nodefaultargfunctions.h"

-- functions

-- C: void ClearOutputData(ImFontBaked* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontBaked_ClearOutputData"
  imFontBaked_ClearOutputData :: (Ptr ImFontBaked) -> IO ()
-- C: ImFontGlyph* FindGlyph(ImFontBaked* self, ImWchar c)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontBaked_FindGlyph"
  imFontBaked_FindGlyph :: (Ptr ImFontBaked) -> ImWchar -> IO (Ptr ImFontGlyph)
-- C: ImFontGlyph* FindGlyphNoFallback(ImFontBaked* self, ImWchar c)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontBaked_FindGlyphNoFallback"
  imFontBaked_FindGlyphNoFallback :: (Ptr ImFontBaked) -> ImWchar -> IO (Ptr ImFontGlyph)
-- C: float GetCharAdvance(ImFontBaked* self, ImWchar c)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontBaked_GetCharAdvance"
  imFontBaked_GetCharAdvance :: (Ptr ImFontBaked) -> ImWchar -> IO CFloat
-- C: bool IsGlyphLoaded(ImFontBaked* self, ImWchar c)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontBaked_IsGlyphLoaded"
  imFontBaked_IsGlyphLoaded :: (Ptr ImFontBaked) -> ImWchar -> IO CBool
